--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-components",
   "version": "0.1.0",
+  "homepage" : "https://dorren.github.io/react-components",
   "private": true,
   "devDependencies": {
     "ava": "^0.19.1",
