--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-components",
   "version": "0.1.0",
-  "homepage" : "https://dorren.github.io/react-components",
+  "homepage": "https://dorren.github.io/react-components",
   "private": true,
   "devDependencies": {
     "ava": "^0.19.1",
@@ -14,8 +14,10 @@
     "highlight": "^0.2.4",
     "highlightjs": "^9.10.0",
     "pretty": "^2.0.0",
+    "prismjs": "^1.7.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-prism": "^4.3.0",
     "react-scripts": "1.0.13"
   },
   "scripts": {
