--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "highlight": "^0.2.4",
     "highlightjs": "^9.10.0",
     "pretty": "^2.0.0",
+    "prism-themes": "^1.0.0",
     "prismjs": "^1.7.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
