--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prismjs": "^1.7.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-draggable": "^3.0.3",
     "react-prism": "^4.3.0",
     "react-scripts": "1.0.13"
   },
