--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^15.6.1",
     "react-draggable": "^3.0.3",
     "react-prism": "^4.3.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13"
   },
   "scripts": {
